--- a/Day-05/index.html
+++ b/Day-05/index.html
@@ -4,23 +4,18 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Animated search widget</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
+  <title>replit</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-  <div class="search">
-    <input type="text" class="input" placeholder="search">
-    <button class="button">
-      <i class="fas fa-search"></i>
-    </button>
-  </div>
 
+<div class="bg" ></div>
+  <div class="loading-text">0%</div>
+  
 
-
-
-
+  
+  
   
   <script src="script.js"></script>
 
