--- a/Day-07/index.html
+++ b/Day-07/index.html
@@ -4,41 +4,32 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Scroll animation</title>
+  <title>Split landing page</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-  <h1 class="white">Animation while scrolling</h1>
+   <div class="container">
+     <div class="split left">
+       <h1 class="h1">God Of War</h1>
+       <a href="a" class="btn">Buy now</a>
+     </div>
+      <div class="split right">
+       <h1 class="h2">God Of War</h1>
+        <h2>R A G N A R O K</h2>
+       <a href="a" class="btn">Buy now</a>
+     </div>
+   </div>
+ 
   
-  <div class="box"><h2>Riddles</h2></div>
-  <div class="box"><h2>Riddles</h2></div>
-  <div class="box"><h2>Riddles</h2></div>
-  <div class="box"><h2>Riddles</h2></div>
-  <div class="box"><h2>Riddles</h2></div>
-  <div class="box"><h2>Riddles</h2></div>
-  <div class="box"><h2>Riddles</h2></div>
-  <div class="box"><h2>Riddles</h2></div>
-  <div class="box"><h2>Riddles</h2></div>
-  <div class="box"><h2>Riddles</h2></div>
-  <div class="box"><h2>Riddles</h2></div>
-  <div class="box"><h2>Riddles</h2></div>
-  <div class="box"><h2>Riddles</h2></div>
-  <div class="box"><h2>Riddles</h2></div>
-  <div class="box"><h2>Riddles</h2></div>
-  <div class="box"><h2>Riddles</h2></div>
-  <div class="box"><h2>Riddles</h2></div>
-  <div class="box"><h2>Riddles</h2></div>
-  <div class="box"><h2>Riddles</h2></div>
-  <div class="box"><h2>Riddles</h2></div>
-  <div class="box"><h2>Riddles</h2></div>
-
-
-
+  
+  
+  
+  
+  
+  
   
   <script src="script.js"></script>
-
- 
 
 </body>
 
