--- a/index.html
+++ b/index.html
@@ -8,8 +8,16 @@
   </head>
   <body>
     <h1>50 Projects 50 Days</h1>
-    <a href="./Day-01/index.html">Day-01</a>
-    </div>
+    <div><a href="./Day-01/index.html">Day-01</a></div>
+    <div><a href="./Day-02/index.html">Day-02</a></div>
+    <div><a href="./Day-03/index.html">Day-03</a></div>
+    <div><a href="./Day-04/index.html">Day-04</a></div>
+    <div><a href="./Day-05/index.html">Day-05</a></div>
+    <div><a href="./Day-06/index.html">Day-06</a></div>
+    <div><a href="./Day-07/index.html">Day-07</a></div>
+    <div><a href="./Day-08/index.html">Day-08</a></div>
+    <div><a href="./Day-09/index.html">Day-09</a></div>
+
     <script src="./script.js"></script>
   </body>
 </html>
