--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div><a href="./Day-07/index.html">Day-07</a></div>
     <div><a href="./Day-08/index.html">Day-08</a></div>
     <div><a href="./Day-09/index.html">Day-09</a></div>
+    <div><a href="./Day-10/index.html">Day-10</a></div>
 
     <script src="./script.js"></script>
   </body>
