--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <div><a href="./Day-08/index.html">Day-08</a></div>
     <div><a href="./Day-09/index.html">Day-09</a></div>
     <div><a href="./Day-10/index.html">Day-10</a></div>
+    <div><a href="./Day-11/index.html">Day-11</a></div>
 
     <script src="./script.js"></script>
   </body>
