--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div><a href="./Day-09/index.html">Day-09</a></div>
     <div><a href="./Day-10/index.html">Day-10</a></div>
     <div><a href="./Day-11/index.html">Day-11</a></div>
+    <div><a href="./Day-12/index.html">Day-12</a></div>
 
     <script src="./script.js"></script>
   </body>
