--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <div><a href="./Day-10/index.html">Day-10</a></div>
     <div><a href="./Day-11/index.html">Day-11</a></div>
     <div><a href="./Day-12/index.html">Day-12</a></div>
+    <div><a href="./Day-13/index.html">Day-13</a></div>
 
     <script src="./script.js"></script>
   </body>
