--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <div><a href="./Day-11/index.html">Day-11</a></div>
     <div><a href="./Day-12/index.html">Day-12</a></div>
     <div><a href="./Day-13/index.html">Day-13</a></div>
+    <div><a href="./Day-14/index.html">Day-14</a></div>
 
     <script src="./script.js"></script>
   </body>
