--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <title>Expanding Cards</title>
@@ -23,6 +24,8 @@
     <div><a href="./Day-13/index.html">Day-13</a></div>
     <div><a href="./Day-14/index.html">Day-14</a></div>
     <div><a href="./Day-15/index.html">Day-15</a></div>
+    <div><a href="./Day-16/index.html">Day-16</a></div>
+    
 
   </body>
 </html>
