--- a/Day-17/index.html
+++ b/Day-17/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <header>
-        <form action="form">
+        <form id="form">
             <input type="text" placeholder="serach"  id="search" class="search">
 
         </form>
