--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <div><a href="./Day-14/index.html">Day-14</a></div>
     <div><a href="./Day-15/index.html">Day-15</a></div>
     <div><a href="./Day-16/index.html">Day-16</a></div>
+    <div><a href="./Day-17/index.html">Day-17</a></div>
+    
     
 
   </body>
