--- a/Day-17/index.html
+++ b/Day-17/index.html
@@ -16,6 +16,13 @@
         </form>
     </header>
 
+    <div id="tags">
+        <div class="tag">Action</div>
+        <div class="tag">Adventure</div>
+        <div class="tag">Drama</div>
+        <div class="tag">Comedy</div>
+    </div>
+
 
     <main id="main">
 
