--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div><a href="./Day-15/index.html">Day-15</a></div>
     <div><a href="./Day-16/index.html">Day-16</a></div>
     <div><a href="./Day-17/index.html">Day-17</a></div>
-    
+    <div><a href="./Day-18/index.html">Day-18</a></div>
     
 
   </body>
