--- a/Day-19/index.html
+++ b/Day-19/index.html
@@ -20,9 +20,10 @@
 
         </div>
 
-        <div class="time">12:00</div>
-        <div class="date">Monday,Nov <span class="circle">2</span></div>
-    <script src="./script.js"></script>
+        <div class="time"></div>
+        <div class="date"></div>
     </div>
+
+    <script src="./script.js"></script>
 </body>
 </html>
