--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     <div><a href="./Day-16/index.html">Day-16</a></div>
     <div><a href="./Day-17/index.html">Day-17</a></div>
     <div><a href="./Day-18/index.html">Day-18</a></div>
-    <div><a href="./Day-19/index.html">Day-19</a></div>.
+    <div><a href="./Day-19/index.html">Day-19</a></div>
+    <div><a href="./Day-20/index.html">Day-20</a></div>
     
 
   </body>
