--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <title>Expanding Cards</title>
+    <title>projects</title>
   </head>
   <body>
     <h1>50 Projects 50 Days</h1>
@@ -29,6 +29,7 @@
     <div><a href="./Day-18/index.html">Day-18</a></div>
     <div><a href="./Day-19/index.html">Day-19</a></div>
     <div><a href="./Day-20/index.html">Day-20</a></div>
+    <div><a href="./Day-21/index.html">Day-21</a></div>
     
 
   </body>
