--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <div><a href="./Day-19/index.html">Day-19</a></div>
     <div><a href="./Day-20/index.html">Day-20</a></div>
     <div><a href="./Day-21/index.html">Day-21</a></div>
+    <div><a href="./Day-22/index.html">Day-22</a></div>
     
 
   </body>
