--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <div><a href="./Day-21/index.html">Day-21</a></div>
     <div><a href="./Day-22/index.html">Day-22</a></div>
     <div><a href="./Day-23/index.html">Day-23</a></div>
+    <div><a href="./Day-24/index.html">Day-24</a></div>
     
 
   </body>
