--- a/Day-21/index.html
+++ b/Day-21/index.html
@@ -8,7 +8,7 @@
     <title>Drag N Drop</title>
 </head>
 <body>
-    <h1>Drag and Drop</h1>
+    <h1>Drag And Drop</h1>
 
     <div class="empty">
         <div class="fill" draggable ="true"></div>
