--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     <div><a href="./Day-22/index.html">Day-22</a></div>
     <div><a href="./Day-23/index.html">Day-23</a></div>
     <div><a href="./Day-24/index.html">Day-24</a></div>
+    <div><a href="./Day-25/index.html">Day-25</a></div>
+
     
 
   </body>
