--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <div><a href="./Day-23/index.html">Day-23</a></div>
     <div><a href="./Day-24/index.html">Day-24</a></div>
     <div><a href="./Day-25/index.html">Day-25</a></div>
+    <div><a href="./Day-26/index.html">Day-26</a></div>
 
     
 
