--- a/index.html
+++ b/index.html
@@ -4,37 +4,44 @@
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css">
     
     <title>projects</title>
   </head>
   <body>
-    <h1>50 Projects 50 Days</h1>
-    <div><a href="./Day-01/index.html">Day-01</a></div>
-    <div><a href="./Day-02/index.html">Day-02</a></div>
-    <div><a href="./Day-03/index.html">Day-03</a></div>
-    <div><a href="./Day-04/index.html">Day-04</a></div>
-    <div><a href="./Day-05/index.html">Day-05</a></div>
-    <div><a href="./Day-06/index.html">Day-06</a></div>
-    <div><a href="./Day-07/index.html">Day-07</a></div>
-    <div><a href="./Day-08/index.html">Day-08</a></div>
-    <div><a href="./Day-09/index.html">Day-09</a></div>
-    <div><a href="./Day-10/index.html">Day-10</a></div>
-    <div><a href="./Day-11/index.html">Day-11</a></div>
-    <div><a href="./Day-12/index.html">Day-12</a></div>
-    <div><a href="./Day-13/index.html">Day-13</a></div>
-    <div><a href="./Day-14/index.html">Day-14</a></div>
-    <div><a href="./Day-15/index.html">Day-15</a></div>
-    <div><a href="./Day-16/index.html">Day-16</a></div>
-    <div><a href="./Day-17/index.html">Day-17</a></div>
-    <div><a href="./Day-18/index.html">Day-18</a></div>
-    <div><a href="./Day-19/index.html">Day-19</a></div>
-    <div><a href="./Day-20/index.html">Day-20</a></div>
-    <div><a href="./Day-21/index.html">Day-21</a></div>
-    <div><a href="./Day-22/index.html">Day-22</a></div>
-    <div><a href="./Day-23/index.html">Day-23</a></div>
-    <div><a href="./Day-24/index.html">Day-24</a></div>
-    <div><a href="./Day-25/index.html">Day-25</a></div>
-    <div><a href="./Day-26/index.html">Day-26</a></div>
+    <div>
+      <h1>50 Projects 50 Days</h1>
+    </div>
+   
+
+    <div class="content">
+    <h2><a href="./Day-01/index.html">Day-01</a></h2>
+    <h2><a href="./Day-02/index.html">Day-02</a></h2>
+    <h2><a href="./Day-03/index.html">Day-03</a></h2>
+    <h2><a href="./Day-04/index.html">Day-04</a></h2>
+    <h2><a href="./Day-05/index.html">Day-05</a></h2>
+    <h2><a href="./Day-06/index.html">Day-06</a></h2>
+    <h2><a href="./Day-07/index.html">Day-07</a></h2>
+    <h2><a href="./Day-08/index.html">Day-08</a></h2>
+    <h2><a href="./Day-09/index.html">Day-09</a></h2>
+    <h2><a href="./Day-10/index.html">Day-10</a></h2>
+    <h2><a href="./Day-11/index.html">Day-11</a></h2>
+    <h2><a href="./Day-12/index.html">Day-12</a></h2>
+    <h2><a href="./Day-13/index.html">Day-13</a></h2>
+    <h2><a href="./Day-14/index.html">Day-14</a></h2>
+    <h2><a href="./Day-15/index.html">Day-15</a></h2>
+    <h2><a href="./Day-16/index.html">Day-16</a></h2>
+    <h2><a href="./Day-17/index.html">Day-17</a></h2>
+    <h2><a href="./Day-18/index.html">Day-18</a></h2>
+    <h2><a href="./Day-19/index.html">Day-19</a></h2>
+    <h2><a href="./Day-20/index.html">Day-20</a></h2>
+    <h2><a href="./Day-21/index.html">Day-21</a></h2>
+    <h2><a href="./Day-22/index.html">Day-22</a></h2>
+    <h2><a href="./Day-23/index.html">Day-23</a></h2>
+    <h2><a href="./Day-24/index.html">Day-24</a></h2>
+    <h2><a href="./Day-25/index.html">Day-25</a></h2>
+    <h2><a href="./Day-26/index.html">Day-26</a></h1>
+  </div>
 
     
 
