--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <h2><a href="./Day-25/index.html">Day-25</a></h2>
     <h2><a href="./Day-26/index.html">Day-26</a></h2>
     <h2><a href="./Day-27/index.html">Day-27</a></h2>
+    <h2><a href="./Day-28/index.html">Day-28</a></h2>
   </div>
 
     
