--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <h2><a href="./Day-26/index.html">Day-26</a></h2>
     <h2><a href="./Day-27/index.html">Day-27</a></h2>
     <h2><a href="./Day-28/index.html">Day-28</a></h2>
+    <h2><a href="./Day-29/index.html">Day-29</a></h2>
   </div>
 
     
