--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
     <h2><a href="./Day-27/index.html">Day-27</a></h2>
     <h2><a href="./Day-28/index.html">Day-28</a></h2>
     <h2><a href="./Day-29/index.html">Day-29</a></h2>
+    <h2><a href="./Day-30/index.html">Day-30</a></h2>
+
   </div>
 
     
