--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
     <h2><a href="./Day-28/index.html">Day-28</a></h2>
     <h2><a href="./Day-29/index.html">Day-29</a></h2>
     <h2><a href="./Day-30/index.html">Day-30</a></h2>
+    <h2><a href="./Day-31/index.html">Day-31</a></h2>
+    
+     
 
   </div>
 
