--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <h2><a href="./Day-30/index.html">Day-30<small>Auto Text Effect</small></a></h2>
     <h2><a href="./Day-31/index.html">Day-31<small>Password Generator</small></a></h2>
     <h2><a href="./Day-32/index.html">Day-32<small>Good Cheap Fast</small></a></h2>
+    <h2><a href="./Day-33/index.html">Day-32<small>Notes App</small></a></h2>
     
      
 
