--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h2><a href="./Day-02/index.html">Day-02<small>Progress Steps</small></a></h2>
     <h2><a href="./Day-03/index.html">Day-03<small>Rotating Navigation Animation</small></a></h2>
     <h2><a href="./Day-04/index.html">Day-04<small>Hidden Search Widget</small></a></h2>
-    <h2><a href="./Day-05/index.html">Day-05<small>	Blurry Loading</small></a></h2>
+    <h2><a href="./Day-05/index.html">Day-05<small>Blurry Loading</small></a></h2>
     <h2><a href="./Day-06/index.html">Day-06<small>Scroll Animation</small></a></h2>
     <h2><a href="./Day-07/index.html">Day-07<small>Split Landing Page</small></a></h2>
     <h2><a href="./Day-08/index.html">Day-08<small>Form Wave</small></a></h2>
@@ -30,7 +30,7 @@
     <h2><a href="./Day-13/index.html">Day-13<small>Random Choice Picker</small></a></h2>
     <h2><a href="./Day-14/index.html">Day-14<small>Animated Navigation</small></a></h2>
     <h2><a href="./Day-15/index.html">Day-15<small>Incrementing Counter</small></a></h2>
-    <h2><a href="./Day-16/index.html">Day-16<small>	Drink Water</small></a></h2>
+    <h2><a href="./Day-16/index.html">Day-16<small>Drink Water</small></a></h2>
     <h2><a href="./Day-17/index.html">Day-17<small>Movie App</small></a></h2>
     <h2><a href="./Day-18/index.html">Day-18<small>Background Slider</small></a></h2>
     <h2><a href="./Day-19/index.html">Day-19<small>Theme Clock</small></a></h2>
@@ -51,6 +51,7 @@
     <h2><a href="./Day-34/index.html">Day-34<small>Animated Countdown</small></a></h2>
     <h2><a href="./Day-35/index.html">Day-35<small>Image Carousel</small></a></h2>
     <h2><a href="./Day-36/index.html">Day-36<small>Hoverboard</small></a></h2>
+    <h2><a href="./Day-37/index.html">Day-37<small>Pokedox</small></a></h2>
     </div>
 
     
