--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     <h2><a href="./Day-35/index.html">Day-35<small>Image Carousel</small></a></h2>
     <h2><a href="./Day-36/index.html">Day-36<small>Hoverboard</small></a></h2>
     <h2><a href="./Day-37/index.html">Day-37<small>Pokedox</small></a></h2>
+    <h2><a href="./Day-38/index.html">Day-38<small>Mobile Tab Navigation</small></a></h2>
     </div>
 
     
