--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     <h2><a href="./Day-36/index.html">Day-36<small>Hoverboard</small></a></h2>
     <h2><a href="./Day-37/index.html">Day-37<small>Pokedox</small></a></h2>
     <h2><a href="./Day-38/index.html">Day-38<small>Mobile Tab Navigation</small></a></h2>
+    <h2><a href="./Day-39/index.html">Day-39<small>Password Strength Background</small></a></h2>
     </div>
 
     
