--- a/Day-39/index.html
+++ b/Day-39/index.html
@@ -11,7 +11,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>Password Strength Background</title>
+    <title>Password strength background</title>
 </head>
 <body>
       
