--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <link rel="stylesheet" href="./styles.css">
+   <link rel="stylesheet" href="./styles.css"> 
     
     <title>projects</title>
   </head>
@@ -15,45 +15,46 @@
    
 
     <div class="content">
-    <h2><a href="./Day-01/index.html">Day-01<small>Expanding Cards</small></a></h2>
-    <h2><a href="./Day-02/index.html">Day-02<small>Progress Steps</small></a></h2>
-    <h2><a href="./Day-03/index.html">Day-03<small>Rotating Navigation Animation</small></a></h2>
-    <h2><a href="./Day-04/index.html">Day-04<small>Hidden Search Widget</small></a></h2>
-    <h2><a href="./Day-05/index.html">Day-05<small>Blurry Loading</small></a></h2>
-    <h2><a href="./Day-06/index.html">Day-06<small>Scroll Animation</small></a></h2>
-    <h2><a href="./Day-07/index.html">Day-07<small>Split Landing Page</small></a></h2>
-    <h2><a href="./Day-08/index.html">Day-08<small>Form Wave</small></a></h2>
-    <h2><a href="./Day-09/index.html">Day-09<small>Sound Board</small></a></h2>
-    <h2><a href="./Day-10/index.html">Day-10<small>Dad Jokes</small></a></h2>
-    <h2><a href="./Day-11/index.html">Day-11<small>Event Keycodes</small></a></h2>
-    <h2><a href="./Day-12/index.html">Day-12<small>Faq Collapse</small></a></h2>
-    <h2><a href="./Day-13/index.html">Day-13<small>Random Choice Picker</small></a></h2>
-    <h2><a href="./Day-14/index.html">Day-14<small>Animated Navigation</small></a></h2>
-    <h2><a href="./Day-15/index.html">Day-15<small>Incrementing Counter</small></a></h2>
-    <h2><a href="./Day-16/index.html">Day-16<small>Drink Water</small></a></h2>
-    <h2><a href="./Day-17/index.html">Day-17<small>Movie App</small></a></h2>
-    <h2><a href="./Day-18/index.html">Day-18<small>Background Slider</small></a></h2>
-    <h2><a href="./Day-19/index.html">Day-19<small>Theme Clock</small></a></h2>
-    <h2><a href="./Day-20/index.html">Day-20<small>Button Ripple Effect</small></a></h2>
-    <h2><a href="./Day-21/index.html">Day-21<small>Drag N Drop</small></a></h2>
-    <h2><a href="./Day-22/index.html">Day-22<small>Drawing App</small></a></h2>
-    <h2><a href="./Day-23/index.html">Day-23<small>Kinetic Loader</small></a></h2>
-    <h2><a href="./Day-24/index.html">Day-24<small>Content Placeholder</small></a></h2>
-    <h2><a href="./Day-25/index.html">Day-25<small>Sticky Navbar</small></a></h2>
-    <h2><a href="./Day-26/index.html">Day-26<small>Double Vertical Slider</small></a></h2>
-    <h2><a href="./Day-27/index.html">Day-27<small>Toast Notification</small></a></h2>
-    <h2><a href="./Day-28/index.html">Day-28<small>Github Profiles</small></a></h2>
-    <h2><a href="./Day-29/index.html">Day-29<small>Double Click Heart</small></a></h2>
-    <h2><a href="./Day-30/index.html">Day-30<small>Auto Text Effect</small></a></h2>
-    <h2><a href="./Day-31/index.html">Day-31<small>Password Generator</small></a></h2>
-    <h2><a href="./Day-32/index.html">Day-32<small>Good Cheap Fast</small></a></h2>
-    <h2><a href="./Day-33/index.html">Day-33<small>Notes App</small></a></h2>
-    <h2><a href="./Day-34/index.html">Day-34<small>Animated Countdown</small></a></h2>
-    <h2><a href="./Day-35/index.html">Day-35<small>Image Carousel</small></a></h2>
-    <h2><a href="./Day-36/index.html">Day-36<small>Hoverboard</small></a></h2>
-    <h2><a href="./Day-37/index.html">Day-37<small>Pokedox</small></a></h2>
-    <h2><a href="./Day-38/index.html">Day-38<small>Mobile Tab Navigation</small></a></h2>
-    <h2><a href="./Day-39/index.html">Day-39<small>Password Strength Background</small></a></h2>
+    <h2><a href="./Day-01/index.html" target="_blank">Day-01<small>Expanding Cards</small></a></h2>
+    <h2><a href="./Day-02/index.html" target="_blank">Day-02<small>Progress Steps</small></a></h2>
+    <h2><a href="./Day-03/index.html" target="_blank">Day-03<small>Rotating Navigation Animation</small></a></h2>
+    <h2><a href="./Day-04/index.html" target="_blank">Day-04<small>Hidden Search Widget</small></a></h2>
+    <h2><a href="./Day-05/index.html" target="_blank">Day-05<small>Blurry Loading</small></a></h2>
+    <h2><a href="./Day-06/index.html" target="_blank">Day-06<small>Scroll Animation</small></a></h2>
+    <h2><a href="./Day-07/index.html" target="_blank">Day-07<small>Split Landing Page</small></a></h2>
+    <h2><a href="./Day-08/index.html" target="_blank">Day-08<small>Form Wave</small></a></h2>
+    <h2><a href="./Day-09/index.html" target="_blank">Day-09<small>Sound Board</small></a></h2>
+    <h2><a href="./Day-10/index.html" target="_blank">Day-10<small>Dad Jokes</small></a></h2>
+    <h2><a href="./Day-11/index.html" target="_blank">Day-11<small>Event Keycodes</small></a></h2>
+    <h2><a href="./Day-12/index.html" target="_blank">Day-12<small>Faq Collapse</small></a></h2>
+    <h2><a href="./Day-13/index.html" target="_blank">Day-13<small>Random Choice Picker</small></a></h2>
+    <h2><a href="./Day-14/index.html" target="_blank">Day-14<small>Animated Navigation</small></a></h2>
+    <h2><a href="./Day-15/index.html" target="_blank">Day-15<small>Incrementing Counter</small></a></h2>
+    <h2><a href="./Day-16/index.html" target="_blank">Day-16<small>Drink Water</small></a></h2>
+    <h2><a href="./Day-17/index.html" target="_blank">Day-17<small>Movie App</small></a></h2>
+    <h2><a href="./Day-18/index.html" target="_blank">Day-18<small>Background Slider</small></a></h2>
+    <h2><a href="./Day-19/index.html" target="_blank">Day-19<small>Theme Clock</small></a></h2>
+    <h2><a href="./Day-20/index.html" target="_blank">Day-20<small>Button Ripple Effect</small></a></h2>
+    <h2><a href="./Day-21/index.html" target="_blank">Day-21<small>Drag N Drop</small></a></h2>
+    <h2><a href="./Day-22/index.html" target="_blank">Day-22<small>Drawing App</small></a></h2>
+    <h2><a href="./Day-23/index.html" target="_blank">Day-23<small>Kinetic Loader</small></a></h2>
+    <h2><a href="./Day-24/index.html" target="_blank">Day-24<small>Content Placeholder</small></a></h2>
+    <h2><a href="./Day-25/index.html" target="_blank">Day-25<small>Sticky Navbar</small></a></h2>
+    <h2><a href="./Day-26/index.html" target="_blank">Day-26<small>Double Vertical Slider</small></a></h2>
+    <h2><a href="./Day-27/index.html" target="_blank">Day-27<small>Toast Notification</small></a></h2>
+    <h2><a href="./Day-28/index.html" target="_blank">Day-28<small>Github Profiles</small></a></h2>
+    <h2><a href="./Day-29/index.html" target="_blank">Day-29<small>Double Click Heart</small></a></h2>
+    <h2><a href="./Day-30/index.html" target="_blank">Day-30<small>Auto Text Effect</small></a></h2>
+    <h2><a href="./Day-31/index.html" target="_blank">Day-31<small>Password Generator</small></a></h2>
+    <h2><a href="./Day-32/index.html" target="_blank">Day-32<small>Good Cheap Fast</small></a></h2>
+    <h2><a href="./Day-33/index.html" target="_blank">Day-33<small>Notes App</small></a></h2>
+    <h2><a href="./Day-34/index.html" target="_blank">Day-34<small>Animated Countdown</small></a></h2>
+    <h2><a href="./Day-35/index.html" target="_blank">Day-35<small>Image Carousel</small></a></h2>
+    <h2><a href="./Day-36/index.html" target="_blank">Day-36<small>Hoverboard</small></a></h2>
+    <h2><a href="./Day-37/index.html" target="_blank">Day-37<small>Pokedox</small></a></h2>
+    <h2><a href="./Day-38/index.html" target="_blank">Day-38<small>Mobile Tab Navigation</small></a></h2>
+    <h2><a href="./Day-39/index.html" target="_blank">Day-39<small>Password Strength Background</small></a></h2>
+    <h2><a href="./Day-40/index.html" target="_blank">Day-40<small>3D Background Boxes</small></a></h2>
     </div>
 
     
