--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <h2><a href="./Day-38/index.html" target="_blank">Day-38<small>Mobile Tab Navigation</small></a></h2>
     <h2><a href="./Day-39/index.html" target="_blank">Day-39<small>Password Strength Background</small></a></h2>
     <h2><a href="./Day-40/index.html" target="_blank">Day-40<small>3D Background Boxes</small></a></h2>
+    <h2><a href="./Day-41/index.html" target="_blank">Day-41<small>Verify Account Ui</small></a></h2>
     </div>
 
     
