--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     <h2><a href="./Day-41/index.html" target="_blank">Day-41<small>Verify Account Ui</small></a></h2>
     <h2><a href="./Day-42/index.html" target="_blank">Day-42<small>Live User Filter</small></a></h2>
     <h2><a href="./Day-43/index.html" target="_blank">Day-43<small>Feedback Ui Design</small></a></h2>
+    <h2><a href="./Day-44/index.html" target="_blank">Day-44<small>Custom Range Slider</small></a></h2>
     </div>
 
     
