--- a/index.html
+++ b/index.html
@@ -53,13 +53,14 @@
     <h2><a href="./Day-36/index.html" target="_blank">Day-36<small>Hoverboard</small></a></h2>
     <h2><a href="./Day-37/index.html" target="_blank">Day-37<small>Pokedox</small></a></h2>
     <h2><a href="./Day-38/index.html" target="_blank">Day-38<small>Mobile Tab Navigation</small></a></h2>
-    <h2><a href="./Day-39/index.html" target="_blank">Day-39<small>Password Strength Background</small></a></h2>
+    <h2><a href="./Day-39/index.html" target="_blank">Day-39<small>Password Background</small></a></h2>
     <h2><a href="./Day-40/index.html" target="_blank">Day-40<small>3D Background Boxes</small></a></h2>
     <h2><a href="./Day-41/index.html" target="_blank">Day-41<small>Verify Account Ui</small></a></h2>
     <h2><a href="./Day-42/index.html" target="_blank">Day-42<small>Live User Filter</small></a></h2>
     <h2><a href="./Day-43/index.html" target="_blank">Day-43<small>Feedback Ui Design</small></a></h2>
     <h2><a href="./Day-44/index.html" target="_blank">Day-44<small>Custom Range Slider</small></a></h2>
     <h2><a href="./Day-45/index.html" target="_blank">Day-45<small>Netflix Navigation</small></a></h2>
+    <h2><a href="./Day-46/index.html" target="_blank">Day-46<small>Quiz App</small></a></h2>
     </div>
 
     
