--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     <h2><a href="./Day-44/index.html" target="_blank">Day-44<small>Custom Range Slider</small></a></h2>
     <h2><a href="./Day-45/index.html" target="_blank">Day-45<small>Netflix Navigation</small></a></h2>
     <h2><a href="./Day-46/index.html" target="_blank">Day-46<small>Quiz App</small></a></h2>
+    <h2><a href="./Day-47/index.html" target="_blank">Day-47<small>Testimonial Box Switcher</small></a></h2>
     </div>
 
     
