--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     <h2><a href="./Day-47/index.html" target="_blank">Day-47<small>Testimonial Box Switcher</small></a></h2>
     <h2><a href="./Day-48/index.html" target="_blank">Day-48<small>Random Image Feed</small></a></h2>
     <h2><a href="./Day-49/index.html" target="_blank">Day-49<small>Todo List</small></a></h2>
+    <h2><a href="./Day-50/index.html" target="_blank">Day-50<small>Insect Catch Game</small></a></h2>
     </div>
 
     
